--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,6 +20,23 @@
 
 TABLEFILE = $(pkgdatadir)/data/table.txt
 
+
+AM_CFLAGS=  @IBUS_CFLAGS@ -DPKGDATADIR=\"$(pkgdatadir)\"  \
+			-DMODEFILE=\"$(MODEFILE)\" -DTABLEFILE=\"$(TABLEFILE)\"
+
+AM_LDFLAGS = @IBUS_LIBS@  @ZINNIA_LIBS@ 
+
+
+if WITH_GTK
+UI_FRONTEND = UI_gtk.c
+AM_CFLAGS += @GTK2_CFLAGS@
+AM_LDFLAGS += @GTK2_LIBS@
+else
+UI_FRONTEND = UI_X11.c
+AM_CFLAGS += -DWITH_X11
+AM_LDFLAGS += -lX11
+endif
+
 if WITH_DEBIAN
 MODEFILE = /usr/share/tegaki/models/zinnia/handwriting-zh_CN.model
 else
@@ -32,17 +49,14 @@ test: ibus-engine-handwrite
 		--table $(top_srcdir)/data/table.txt
 endif
 
-AM_CFLAGS= @GTK2_CFLAGS@ @IBUS_CFLAGS@ -DPKGDATADIR=\"$(pkgdatadir)\"  \
-			-DMODEFILE=\"$(MODEFILE)\" -DTABLEFILE=\"$(TABLEFILE)\"
 
-AM_LDFLAGS = @IBUS_LIBS@ @GTK2_LIBS@ @ZINNIA_LIBS@ 
 
 libexecdir = @datadir@/ibus/engine/
 
 libexec_PROGRAMS = ibus-engine-handwrite
 
 ibus_engine_handwrite_SOURCES =  main.c 	engine.c 	engine.h	prase.c prase.h \
-					  UI_gtk.c \
+					  $(UI_FRONTEND) \
 					  handrecog_zinnia.c \
 					  handrecog.c \
 					  handrecog.h \
